error correction and replacing DataFrame.append usage

--- a/q1.ipynb
+++ b/q1.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_284\\2865392654.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  composition_table = composition_table.append(pd.Series({aa: aas.count(aa)*100/len(aas) for aa in amino_acids}, name=input_sequences.index(i)))\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_284\\2865392654.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  composition_table = composition_table.append(pd.Series({aa: aas.count(aa)*100/len(aas) for aa in amino_acids}, name=input_sequences.index(i)))\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_284\\2865392654.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  composition_table = composition_table.append(pd.Series({aa: aas.count(aa)*100/len(aas) for aa in amino_acids}, name=input_sequences.index(i)))\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -75,7 +63,7 @@
        "      <td>1.492537</td>\n",
        "      <td>8.955224</td>\n",
        "      <td>7.462687</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.492537</td>\n",
        "      <td>7.462687</td>\n",
        "      <td>5.970149</td>\n",
@@ -88,22 +76,22 @@
        "      <th>1</th>\n",
        "      <td>19.117647</td>\n",
        "      <td>2.941176</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.941176</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.941176</td>\n",
        "      <td>1.470588</td>\n",
        "      <td>14.705882</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>11.764706</td>\n",
        "      <td>13.235294</td>\n",
        "      <td>1.470588</td>\n",
        "      <td>7.352941</td>\n",
        "      <td>5.882353</td>\n",
        "      <td>4.411765</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.470588</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.470588</td>\n",
        "      <td>8.823529</td>\n",
        "    </tr>\n",
@@ -113,20 +101,20 @@
        "      <td>3.311258</td>\n",
        "      <td>3.311258</td>\n",
        "      <td>5.960265</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>3.311258</td>\n",
-       "      <td>3.973510</td>\n",
+       "      <td>3.97351</td>\n",
        "      <td>15.231788</td>\n",
        "      <td>1.324503</td>\n",
        "      <td>5.298013</td>\n",
        "      <td>5.960265</td>\n",
-       "      <td>3.973510</td>\n",
+       "      <td>3.97351</td>\n",
        "      <td>0.662252</td>\n",
        "      <td>5.298013</td>\n",
        "      <td>2.649007</td>\n",
        "      <td>9.933775</td>\n",
        "      <td>4.635762</td>\n",
-       "      <td>3.973510</td>\n",
+       "      <td>3.97351</td>\n",
        "      <td>5.298013</td>\n",
        "      <td>5.298013</td>\n",
        "    </tr>\n",
@@ -137,18 +125,18 @@
       "text/plain": [
        "           A         R         N         D         C         Q         E  \\\n",
        "0  17.910448  5.970149  1.492537  2.985075  1.492537  1.492537  2.985075   \n",
-       "1  19.117647  2.941176  0.000000  2.941176  0.000000  2.941176  1.470588   \n",
-       "2  10.596026  3.311258  3.311258  5.960265  0.000000  3.311258  3.973510   \n",
+       "1  19.117647  2.941176       0.0  2.941176       0.0  2.941176  1.470588   \n",
+       "2  10.596026  3.311258  3.311258  5.960265       0.0  3.311258   3.97351   \n",
        "\n",
        "           G         H          I          L         K         M         F  \\\n",
-       "0   5.970149  4.477612   1.492537   8.955224  7.462687  0.000000  1.492537   \n",
-       "1  14.705882  0.000000  11.764706  13.235294  1.470588  7.352941  5.882353   \n",
-       "2  15.231788  1.324503   5.298013   5.960265  3.973510  0.662252  5.298013   \n",
+       "0   5.970149  4.477612   1.492537   8.955224  7.462687       0.0  1.492537   \n",
+       "1  14.705882       0.0  11.764706  13.235294  1.470588  7.352941  5.882353   \n",
+       "2  15.231788  1.324503   5.298013   5.960265   3.97351  0.662252  5.298013   \n",
        "\n",
        "          P         S          T         W         Y         V  \n",
        "0  7.462687  5.970149  10.447761  5.970149  4.477612  1.492537  \n",
-       "1  4.411765  0.000000   1.470588  0.000000  1.470588  8.823529  \n",
-       "2  2.649007  9.933775   4.635762  3.973510  5.298013  5.298013  "
+       "1  4.411765       0.0   1.470588       0.0  1.470588  8.823529  \n",
+       "2  2.649007  9.933775   4.635762   3.97351  5.298013  5.298013  "
       ]
      },
      "metadata": {},
@@ -166,12 +154,12 @@
     "\n",
     "amino_acids = ['A', 'R', 'N', 'D', 'C', 'Q', 'E', 'G', 'H', 'I', 'L', 'K', 'M', 'F', 'P', 'S', 'T', 'W', 'Y', 'V']\n",
     "\n",
-    "composition_table = pd.DataFrame(columns=amino_acids)\n",
-    "\n",
+    "composition_table = pd.DataFrame(columns=amino_acids, index=[0,1,2])\n",
     "\n",
     "for i in input_sequences:\n",
     "    aas = list(i)\n",
-    "    composition_table = composition_table.append(pd.Series({aa: aas.count(aa)*100/len(aas) for aa in amino_acids}, name=input_sequences.index(i)))\n",
+    "    for j in amino_acids:\n",
+    "        composition_table[j][input_sequences.index(i)] = aas.count(j)*100/len(aas)\n",
     "\n",
     "display(composition_table)"
    ]
