--- a/q5.ipynb
+++ b/q5.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_19120\\1658770398.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  properties_table = properties_table.append(pd.Series({'Hgm': hgm_val, 'Ca': ca_val, 'Et': et_val}, name=input_sequences.index(i)))\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_19120\\1658770398.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  properties_table = properties_table.append(pd.Series({'Hgm': hgm_val, 'Ca': ca_val, 'Et': et_val}, name=input_sequences.index(i)))\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_19120\\1658770398.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  properties_table = properties_table.append(pd.Series({'Hgm': hgm_val, 'Ca': ca_val, 'Et': et_val}, name=input_sequences.index(i)))\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -46,19 +34,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>894.62</td>\n",
+       "      <td>13.352537</td>\n",
        "      <td>32.179104</td>\n",
        "      <td>117.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>936.47</td>\n",
+       "      <td>13.771618</td>\n",
        "      <td>30.397059</td>\n",
        "      <td>126.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2026.22</td>\n",
+       "      <td>13.418675</td>\n",
        "      <td>30.569536</td>\n",
        "      <td>267.75</td>\n",
        "    </tr>\n",
@@ -67,13 +55,13 @@
        "</div>"
       ],
       "text/plain": [
-       "       Hgm         Ca      Et\n",
-       "0   894.62  32.179104  117.74\n",
-       "1   936.47  30.397059  126.66\n",
-       "2  2026.22  30.569536  267.75"
+       "         Hgm         Ca      Et\n",
+       "0  13.352537  32.179104  117.74\n",
+       "1  13.771618  30.397059  126.66\n",
+       "2  13.418675  30.569536  267.75"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +99,7 @@
     "}\n",
     "\n",
     "\n",
-    "properties_table = pd.DataFrame(columns=['Hgm', 'Ca', 'Et'])\n",
+    "properties_table = pd.DataFrame(columns=['Hgm', 'Ca', 'Et'], index=[0,1,2])\n",
     "\n",
     "Hgm = {'Ala': 13.85, 'Asp': 11.61, 'Cys': 15.37, 'Glu': 11.38, 'Phe': 13.93, 'Gly': 13.34, 'His': 13.82, 'Ile': 15.28, 'Lys': 11.58, 'Leu': 14.13, 'Met': 13.86, 'Asn': 13.02, 'Pro': 12.35, 'Gln': 12.61, 'Arg': 13.1, 'Ser': 13.39, 'Thr': 12.7, 'Val': 14.56, 'Trp': 15.48, 'Tyr': 13.88}\n",
     "Ca = {\n",
@@ -162,11 +150,13 @@
     "\n",
     "for i in input_sequences:\n",
     "    aas = list(i)\n",
-    "    hgm_val = sum([Hgm[amino_acids_dict[aa]] for aa in aas])\n",
+    "    hgm_val = sum([Hgm[amino_acids_dict[aa]] for aa in aas])/len(aas)\n",
     "    ca_val = sum([Ca[amino_acids_dict[aa]] for aa in aas])/len(aas)\n",
     "    et_val = sum([Et[amino_acids_dict[aa]] for aa in aas])\n",
     "\n",
-    "    properties_table = properties_table.append(pd.Series({'Hgm': hgm_val, 'Ca': ca_val, 'Et': et_val}, name=input_sequences.index(i)))\n",
+    "    properties_table['Hgm'][input_sequences.index(i)] = hgm_val\n",
+    "    properties_table['Ca'][input_sequences.index(i)] = ca_val\n",
+    "    properties_table['Et'][input_sequences.index(i)] = et_val\n",
     "\n",
     "\n",
     "properties_table"
